[gd_scene load_steps=2 format=3 uid="uid://bh64ae3erkbmx"]

[ext_resource type="Script" uid="uid://cqhahmttx7k1m" path="res://ui/hud.gd" id="1_rbyyf"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rbyyf")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
offset_left = 33.0
offset_top = 29.0
offset_right = 181.0
offset_bottom = 95.0
metadata/_edit_group_ = true

[node name="CreateBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "创建游戏"

[node name="JoinBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "加入游戏"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "房间信息"

[node name="StartBtn" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -115.0
offset_right = 36.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "开始游戏"

[connection signal="pressed" from="HBoxContainer/CreateBtn" to="." method="_on_create_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
